format code layout

--- a/home.html
+++ b/home.html
@@ -65,8 +65,7 @@
 					return total;
 				};
 
-				this.add();
-				// initial item
+				this.add(); // initial item
 			});
 		</script>
 	</head>
